<resources>
    <string name="app_name">JerryStore</string>
    <string name="hi_jerry">Hi, Jerry 👋🏻</string>
    <string name="which_tom_do_you_want_to_buy">Which Tom do you want to buy?</string>
    <string name="search_about_tom">Search about tom ...</string>
    <string name="buy_1_tom_and_get_2_for_free">Buy 1 Tom and get 2 for free</string>
    <string name="adopt_tom_free_fail_free_guarantee">"Adopt Tom! (Free Fail-Free\nGuarantee)"</string>
    <string name="jerry_image">Jerry Image</string>
    <string name="tom_love_the_money">Tom love the money</string>
    <string name="view_all">View all</string>
    <string name="right_arrow">right arrow</string>
    <string name="cheap_tom_section">Cheap tom section</string>
    <string name="search_filter">Search Filter</string>
    <string name="card_button">Card button</string>
    <string name="he_runs_1_meter_trips_over_his_boot">He runs 1 meter... trips over his boot.</string>
    <string name="sport_tom">Sport Tom</string>
    <string name="tom_eating">tom eating</string>
    <string name="search_icon">Search Icon</string>
    <string name="_3_cheeses">" 3 cheeses"</string>
    <string name="tom_the_lover_description">He loves one-sidedly... and is beaten by the other side.</string>
    <string name="scared_tom_description">He blows himself up before Jerry can catch him.</string>
    <string name="crying_tom_description">Disguises itself as a table.</string>
    <string name="frozen_tom_description">He was chasing Jerry, he froze after the first look</string>
    <string name="sleeping_tom_description">"He doesn't chase anyone, he just snores in stereo. "</string>
    <string name="tom_the_lover_price">5 cheeses</string>
    <string name="scared_tom_price">10 cheeses</string>
    <string name="crying_tom_price">12 cheeses</string>
    <string name="frozen_tom_price">10 cheeses</string>
    <string name="sleeping_tom_price">10 cheeses</string>
    <string name="tom_the_lover_name">Tom the lover</string>
    <string name="scared_tom_name">Tom the bomb</string>
    <string name="crying_tom_name">Spy Tom</string>
    <string name="frozen_tom_name">Frozen Tom</string>
    <string name="sleeping_tom_name">Sleeping Tom</string>
    <string name="old_price">"5"</string>
</resources>
