<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="12dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/search_box_bg"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/search_icon"
            android:src="@drawable/ic_search">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/ibm_plex_sans_arabic_regular"
            android:letterSpacing="0"
            android:paddingVertical="1.5dp"
            android:text="@string/search_about_tom"
            android:textColor="#969799"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/bg_blue_circle"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/search_filter"
            android:src="@drawable/filter_horizontal" />

    </LinearLayout>
</LinearLayout>

