<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_store_card"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <View
                android:layout_width="100dp"
                android:layout_height="84dp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sport_tom"
                android:textColor="@color/title" />

            <TextView
                android:id="@+id/product_description"
                style="@style/BodyText"
                android:layout_width="144dp"
                android:layout_height="54dp"
                android:layout_marginBottom="8dp"
                android:text="@string/he_runs_1_meter_trips_over_his_boot"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_price"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="6dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_money_bag" />

                    <TextView
                        android:id="@+id/product_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:maxLines="1"
                        android:text="@string/_3_cheeses" />
                </LinearLayout>

                <ImageButton
                    style="@style/AddToCardButton"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:padding="7dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/tom_eating"
        android:src="@drawable/img_eating_tom" />
</FrameLayout>
