<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="12dp"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ibm_plex_sans_arabic_semi_bold"
            android:letterSpacing="0"
            android:text="@string/cheap_tom_section"
            android:textColor="@color/title"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_sans_arabic_medium"
            android:letterSpacing="0"
            android:paddingEnd="4dp"
            android:text="@string/view_all"
            android:textColor="#03578A"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:contentDescription="@string/right_arrow"
            android:src="@drawable/ic_arrow_right" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/product_1"
            layout="@layout/product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1" />

        <include
            android:id="@+id/product_2"
            layout="@layout/product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/product_3"
            layout="@layout/product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1" />

        <include
            android:id="@+id/product_4"
            layout="@layout/product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/product_5"
            layout="@layout/product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1" />

        <include
            android:id="@+id/product_6"
            layout="@layout/product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
